# essential-server

./: .gitignore  Cargo.toml  README.md  apps.nix  default.nix  flake.nix  overlay.nix  shell.nix
.github/workflows/: ci.yml  release.yml
crates/constraint-vm/: Cargo.toml
crates/constraint-vm/src/: access.rs  alu.rs  crypto.rs  error.rs  lib.rs  stack.rs
crates/dry-run/: Cargo.toml
crates/dry-run/src/: lib.rs  main.rs
crates/essential/: Cargo.toml
crates/essential/src/: deploy.rs  lib.rs  permit.rs  run.rs  signed.rs  solution.rs  storage.rs  test_utils.rs  tests.rs  utils.rs  validate.rs
crates/essential/src/deploy/: tests.rs  validate.rs
crates/essential/src/deploy/tests/: deploy.rs  validate.rs
crates/essential/src/permit/: tests.rs
crates/essential/src/run/: tests.rs
crates/essential/src/solution/: read.rs  tests.rs  validate.rs
crates/essential/src/solution/tests/: check.rs  read.rs  submit.rs  validate.rs
crates/essential/src/test_utils/: storage.rs
crates/essential/src/validate/: tests.rs
crates/memory-storage/: Cargo.toml  README.md
crates/memory-storage/src/: lib.rs  tests.rs  values.rs
crates/memory-storage/src/values/: tests.rs
crates/placeholder/: Cargo.toml
crates/placeholder/src/: lib.rs
crates/rest-server/: Cargo.toml  README.md
crates/rest-server/src/: lib.rs  main.rs
crates/rest-server/tests/: curl.rs  integration.rs  load_test.rs  utils.rs
crates/rlite-storage/: Cargo.toml
crates/rlite-storage/src/: lib.rs
crates/rqlite-storage/: Cargo.toml  README.md
crates/rqlite-storage/benches/: queries.rs
crates/rqlite-storage/sql/create/: batch.sql  contract_pairing.sql  contract_state.sql  contracts.sql  eoa.sql  eoa_state.sql  failed_solutions.sql  intent_set_pairing.sql  intent_sets.sql  intent_state.sql  intents.sql  partial_solutions.sql  predicates.sql  solutions.sql  solutions_pool.sql  solved.sql  storage_layout.sql
crates/rqlite-storage/sql/index/: failed_solutions_content_hash.sql  solved_batch_id.sql  solved_content_hash.sql
crates/rqlite-storage/sql/insert/: batch.sql  contract.sql  contract_pairing.sql  contracts.sql  copy_to_failed.sql  copy_to_solved.sql  eoa.sql  intent_set.sql  intent_set_pairing.sql  intents.sql  partial_solutions.sql  predicates.sql  solutions.sql  solutions_pool.sql  storage_layout.sql
crates/rqlite-storage/sql/query/: get_contract.sql  get_contract_salt.sql  get_contract_signature.sql  get_eoa_state.sql  get_intent.sql  get_intent_set.sql  get_intent_set_signature.sql  get_latest_block.sql  get_partial_solution.sql  get_predicate.sql  get_solution.sql  get_solution_outcomes.sql  get_state.sql  get_storage_layout.sql  is_partial_solution_solved.sql  list_contract_salts.sql  list_contract_salts_by_time.sql  list_contracts.sql  list_contracts_by_time.sql  list_failed_solutions.sql  list_intent_sets.sql  list_intent_sets_by_time.sql  list_partial_solutions.sql  list_solutions_pool.sql  list_winning_batches.sql  list_winning_batches_by_time.sql
crates/rqlite-storage/sql/update/: delete_empty_batch.sql  delete_eoa_state.sql  delete_from_solutions_pool.sql  delete_state.sql  prune_failed.sql  set_partial_solution_to_solved.sql  update_eoa_state.sql  update_state.sql
crates/rqlite-storage/src/: lib.rs  test_encode_decode.rs  values.rs
crates/rqlite-storage/src/values/: test_get_contract.rs  test_get_intent_set.rs  test_get_partial_solution.rs  test_get_solution.rs  test_list_contracts.rs  test_list_failed_solutions.rs  test_list_intent_sets.rs  test_list_solutions.rs  test_list_winning_blocks.rs  test_map_execute_to_values.rs  test_map_execute_to_word.rs  test_map_query_to_query_values.rs  test_map_solution_to_block.rs  test_single_value.rs
crates/rqlite-storage/tests/: sanity.rs  sql_intents.rs  sql_predicates.rs  sql_solutions.rs  sql_state.rs
crates/rqlite-storage/tests/common/: mod.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: deploy.rs  lib.rs  main.rs  protocol.rs  query_state_reads.rs  run.rs  solution.rs  test_utils.rs
crates/server/src/deploy/: tests.rs
crates/server/src/query_state_reads/: tests.rs
crates/server/src/run/: tests.rs
crates/server/src/solution/: read.rs  tests.rs
crates/server/src/solution/tests/: read.rs  submit.rs
crates/server/tests/: integration.rs  tests.rs
crates/state-read-vm/: Cargo.toml
crates/state-read-vm/src/: bytecode.rs  ctrl_flow.rs  error.rs  future.rs  lib.rs  memory.rs  state_read.rs
crates/state-read-vm/tests/: bytecode.rs  ctrl_flow.rs  memory.rs  state_read.rs  util.rs  vm.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: failed_solution.rs  lib.rs  state_write.rs  streams.rs
crates/storage/src/streams/: tests.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: empty.rs  lib.rs
crates/test_dbs/: Cargo.toml
crates/test_dbs/src/: lib.rs  rqlite.rs
crates/test_dbs/tests/: sanity.rs  storage.rs  tests.rs
crates/test_dbs/tests/common/: mod.rs
crates/test_dbs/tests/rqlite/: mod.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: empty.rs  instantiate.rs  lib.rs  solution.rs
crates/transaction-storage/: Cargo.toml  README.md
crates/transaction-storage/src/: lib.rs  tests.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: lib.rs  ser.rs
crates/types/src/ser/: tests.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  tests.rs
deploy/: .terraform.lock.hcl  rqlite.tf
pkgs/: deploy-rqlite.nix  essential-rest-server.nix  essential-server.nix  etcd-node.nix  rqlite-node.nix  server-node.nix  server-with-rqlite.nix
