[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Essential Contributions <contact@essentialcontributions.com>"]
homepage = "https://essential.builders/"
license = "Apache-2.0"
repository = "https://github.com/essential-contributions/essential-server"

[workspace.dependencies]
anyhow = "1.0.80"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
criterion = "0.5"
essential-check = "0.2.0"
essential-constraint-vm = "0.2.0"
essential-hash = "0.2.0"
essential-lock = "0.1.0"
essential-sign = "0.2.0"
essential-state-read-vm = "0.2.0" 
essential-types = "0.2.0"
futures = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
hyper = "1.3.1"
hyper-util = "0.1.5"
imbl = "3.0.0"
paste = "1.0.15"
postcard = { version = "1.0.8", features = ["alloc"] }
pretty_assertions = "1.4.0"
rayon = "1.10"
reqwest = "0.12.5"
secp256k1 = { version = "0.29", features = ["rand-std", "hashes-std"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
tempfile = "3.10.0"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec", "io"]}
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = {version = "0.1", features = ["attributes"]}
tracing-subscriber = "0.3"

essential-memory-storage = { path = "crates/memory-storage", version = "0.2.0" }
essential-rqlite-storage = { path = "crates/rqlite-storage", version = "0.2.0" }
essential-server = { path = "crates/server", version = "0.2.0" }
essential-server-types = { path = "crates/types", version = "0.2.0" }
essential-storage = { path = "crates/storage", version = "0.2.0" }
essential-transaction-storage = { path = "crates/transaction-storage", version = "0.2.0" }
test-dbs = { path = "crates/test_dbs" }
test-utils = { path = "crates/test-utils" }
