[package]
name = "essential-constraint-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2.1.0"
# essential-types = { workspace = true }
essential-types = { path = "./../../../base/crates/types" }
# TODO: Switch back after upstreaming errors.
# essential-constraint-asm = { workspace = true }
essential-constraint-asm = { path = "./../../../base/crates/constraint-asm" }
sha2 = "0.10.8"
thiserror = "1"
