[package]
name = "essential-constraint-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2.1.0"
# essential-types = { workspace = true }
# essential-constraint-asm = { workspace = true }
sha2 = "0.10.8"
thiserror = "1"

# TODO: Remove these after essential-base#55 lands.
essential-types = { git = "ssh://git@github.com/essential-contributions/essential-base.git", branch = "mitchmindtree/error-impls" }
essential-constraint-asm = { git = "ssh://git@github.com/essential-contributions/essential-base.git", branch = "mitchmindtree/error-impls" }
