[package]
name = "essential-dry-run"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
essential-memory-storage = { workspace = true }
essential-server = { workspace = true }
essential-types = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
