[package]
edition = "2021"
name = "essential-server"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
essential-constraint-vm = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
storage = { workspace = true }
tokio = { workspace = true }
transaction-storage = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
memory-storage = { workspace = true }
test-utils = { workspace = true }
