[package]
edition = "2021"
name = "memory-storage"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
essential-hash = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
storage = { workspace = true }
thiserror = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
test-utils = { workspace = true }
tokio = { workspace = true }
