[package]
name = "essential-memory-storage"
version = "0.2.0"
description = "In memory storage for the Essential server"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
essential-hash = { workspace = true }
essential-lock = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-storage = { workspace = true }
essential-server-types.workspace = true
essential-types = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-utils = { workspace = true }
tokio = { workspace = true }
