[package]
edition = "2021"
name = "essential-rest-server"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
essential-memory-storage = { workspace = true }
essential-rqlite-storage = { workspace = true }
essential-server = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
essential-hash = { workspace = true }
essential-storage = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
test-utils = { workspace = true }
utils = { workspace = true }
