[package]
edition = "2021"
name = "essential-rest-server"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["http2"] }
base64 = { workspace = true }
clap = { workspace = true }
essential-memory-storage = { workspace = true }
essential-rqlite-storage = { workspace = true }
essential-server = { workspace = true }
essential-server-types = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true, features = ["http2"] }
hyper-util = { workspace = true, features = ["http2"] }
serde = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
    "env-filter",
] }

[dev-dependencies]
essential-hash = { workspace = true }
essential-storage = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
test-utils = { workspace = true }

[features]
default = ["tracing"]
tracing = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "essential-rqlite-storage/tracing",
    "essential-server/tracing",
]
