[package]
name = "essential-rest-server"
version = "0.1.0"
description = "A REST server that wraps Essential server and exposes it's functionality"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["http2"] }
clap = { workspace = true }
essential-memory-storage = { workspace = true }
essential-rqlite-storage = { workspace = true }
essential-server = { workspace = true }
essential-server-types = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http.workspace = true
hyper = { workspace = true, features = ["http2"] }
hyper-util = { workspace = true, features = ["http2"] }
serde = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
    "env-filter",
] }

[dev-dependencies]
essential-hash = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-storage = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
test-utils = { workspace = true }

[features]
default = ["tracing"]
tracing = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "essential-rqlite-storage/tracing",
    "essential-server/tracing",
]
