[package]
edition = "2021"
name = "essential-rqlite-storage"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
essential-hash = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-storage = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
postcard = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
rusqlite = { version = "0.30.0", features = ["bundled", "backup"] }
test-utils = { workspace = true }

[features]
default = []
tracing = ["dep:tracing"]

[[bench]]
name = "queries"
harness = false