[package]
name = "essential-rqlite-storage"
version = "0.2.0"
description = "Rqlite storage for the Essential server"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
essential-hash = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-storage = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
postcard = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
rusqlite = { version = "0.31.0", features = ["bundled", "backup"] }
test-utils = { workspace = true }

[features]
default = []
tracing = ["dep:tracing"]

[[bench]]
name = "queries"
harness = false