[package]
edition = "2021"
name = "essential-server"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
essential-check = { workspace = true }
essential-constraint-vm = { workspace = true }
essential-hash = { workspace = true }
essential-sign = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-storage = { workspace = true }
essential-transaction-storage = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
essential-memory-storage = { workspace = true }
test-utils = { workspace = true }
tracing-subscriber = { workspace = true }
