[package]
edition = "2021"
name = "essential-server"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
essential-check = { workspace = true }
essential-constraint-vm = { workspace = true }
essential-hash = { workspace = true }
essential-memory-storage = { workspace = true, optional = true }
essential-server-types = { workspace = true }
essential-sign = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-storage = { workspace = true }
essential-transaction-storage = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
test-utils = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
test-utils = [ "dep:essential-memory-storage", "dep:test-utils", "dep:tracing-subscriber" ]
tracing = [ "dep:tracing", "essential-check/tracing", "essential-constraint-vm/tracing", "essential-state-read-vm/tracing" ]
