[package]
name = "essential-server"
version = "0.3.0"
description = "Declaritive constraint checking engine"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
essential-check = { workspace = true }
essential-constraint-vm = { workspace = true }
essential-hash = { workspace = true }
essential-lock = { workspace = true }
essential-server-types = { workspace = true }
essential-sign = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-storage = { workspace = true }
essential-transaction-storage = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
essential-memory-storage = { workspace = true }
test-dbs = { workspace = true }
test-utils = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
tracing = [ "dep:tracing", "essential-check/tracing", "essential-constraint-vm/tracing", "essential-state-read-vm/tracing" ]
rqlite = [ "test-dbs/rqlite" ]
