[package]
name = "essential-state-read-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
constraint-vm = { workspace = true }
essential-state-asm = { workspace = true }
essential-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }
