[package]
name = "essential-storage"
version = "0.3.0"
description = "A storage abstraction for the Essential server"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
essential-types = { workspace = true }
futures.workspace = true
serde = { workspace = true }
tokio.workspace = true
