[package]
edition = "2021"
name = "test-utils"
version = "0.1.0"
publish = false

[dependencies]
essential-hash = { workspace = true }
essential-sign = { workspace = true }
essential-types = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
utils = { workspace = true }
