[package]
edition = "2021"
name = "test-utils"
publish = false
version = "0.1.0"

[dependencies]
essential-constraint-vm = { workspace = true }
essential-hash = { workspace = true }
essential-sign = { workspace = true }
essential-types = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
