[package]
name = "test-utils"
publish = false
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-constraint-vm = { workspace = true }
essential-hash = { workspace = true }
essential-sign = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-types = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
