[package]
edition = "2021"
name = "test-dbs"
publish = false
version = "0.1.0"

[[test]]
name = "essential"
path = "tests/tests.rs"

[dependencies]
essential-hash = { workspace = true }
essential-memory-storage = { workspace = true }
essential-rqlite-storage = { workspace = true }
essential-server = { workspace = true, features = [ "test-utils" ] }
essential-sign = { workspace = true }
essential-storage = { workspace = true }
essential-types = { workspace = true }
paste = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
test-utils = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
rqlite = []
