[package]
edition = "2021"
name = "essential-transaction-storage"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
essential-hash = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-storage = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
imbl = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
essential-memory-storage = { workspace = true }
test-utils = { workspace = true }
tokio = { workspace = true }
