[package]
name = "essential-transaction-storage"
version = "0.1.0"
description = "A transaction storage abstraction for the Essential server"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
essential-hash = { workspace = true }
essential-state-read-vm = { workspace = true }
essential-storage = { workspace = true }
essential-types = { workspace = true }
futures = { workspace = true }
imbl = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
essential-memory-storage = { workspace = true }
test-utils = { workspace = true }
tokio = { workspace = true }
