[package]
name = "essential-server-types"
version = "0.2.0"
description = "Types used for communicating with the Essential REST server"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
essential-types = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json.workspace = true